plugins {
    id 'fabric-loom' version '1.10-SNAPSHOT'
    id "me.modmuss50.mod-publish-plugin" version "0.8.4"
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

repositories {
    maven {
        name = 'ParchmentMC'
        url = 'https://maven.parchmentmc.org'
    }
    maven {
        name = "Terraformers"
        url = "https://maven.terraformersmc.com/"
    }
    maven { url = "https://raw.githubusercontent.com/fishstiz/maven/m2" }
    exclusiveContent {
        forRepository {
            maven {
                name = "Modrinth"
                url = "https://api.modrinth.com/maven"
            }
        }
        filter {
            includeGroup "maven.modrinth"
        }
    }
    maven { url = "https://maven.frohnmeyer-wds.de/artifacts" }
}

dependencies {
    minecraft "com.mojang:minecraft:$minecraft_version"
    mappings loom.layered() {
        officialMojangMappings()
        parchment("org.parchmentmc.data:parchment-$parchment_minecraft:$parchment_version@zip")
    }
    modImplementation "net.fabricmc:fabric-loader:$loader_version"
    modImplementation "net.fabricmc.fabric-api:fabric-api:$fabric_api_version"

    // Mod Compatibility
    modImplementation "com.terraformersmc:modmenu:$modmenu_version"
    modCompileOnly "io.github.fishstiz:minecraft-cursor-fabric-api:$mccursor_version"
    modLocalRuntime "io.github.fishstiz:minecraft-cursor-fabric:$mccursor_version"
    modCompileOnly "maven.modrinth:resourcify:$resourcify_version"
    modCompileOnly "maven.modrinth:respackopts:$respackopts_version"
    modCompileOnly "io.gitlab.jfronny.libjf:libjf-resource-pack-entry-widgets-v0:$libjf_version"
}


loom {
    accessWidenerPath = file("src/main/resources/${archives_base_name}.accesswidener")

    runs {
        client {
            client()
            setConfigName('Fabric Client')
            ideConfigGenerated(true)
            runDir('run')
        }
    }
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": inputs.properties.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 21
}

java {
    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
    // if it is present.
    // If you remove this line, sources will not be generated.
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

jar {
    inputs.property "archivesName", project.base.archivesName

    from("LICENSE") {
        rename { "${it}_${inputs.properties.archivesName}" }
    }
}

Properties secrets = new Properties()
File secretsFile = project.rootProject.file('local.properties')

if (secretsFile.exists()) {
    secrets.load(secretsFile.newDataInputStream())
}

publishMods {
    file = remapJar.archiveFile
    additionalFiles.from(remapSourcesJar.archiveFile)
    changelog = file("CHANGELOG.md").text
    displayName = "$mod_name v$mod_version"
    type = BETA
    modLoaders.add("fabric")

    github {
        accessToken = secrets.getProperty("GITHUB_TOKEN")
        repository = "fishstiz/packed_packs"
        commitish = "mc/$minecraft_version"
        tagName = "v$mod_version"
    }

    modrinth {
        accessToken = secrets.getProperty("MODRINTH_TOKEN")
        projectId = "8Pq6Exn2"
        minecraftVersions.add(minecraft_version)
        requires("fabric-api")
    }

    curseforge {
        accessToken = secrets.getProperty("CURSEFORGE_TOKEN")
        projectId = "1260514"
        minecraftVersions.add(minecraft_version)
        clientRequired = true
        requires("fabric-api")
    }
}
